<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--my sort menu-->
    <item
        android:id="@+id/menuS"
        android:orderInCategory="1"
        android:title="@string/menu"
        app:showAsAction="ifRoom">

    <menu>
        <item android:id="@+id/sortAll"
                android:title="@string/sort0"/>
        <item android:id="@+id/sort1"
                android:title="@string/sort1"/>
        <item android:id="@+id/sort2"
                android:title="@string/sort2"/>
        <item android:id="@+id/sort3"
                android:title="@string/sort3"/>
        <item android:id="@+id/sort4"
                android:title="@string/sort4"/>
    </menu>

</item>



</menu>

